added menu placeholder

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 }
 
 h1 {
-  font-family: 'Old Standard TT', serif; 
+  font-family: 'Nixie One';
   font-size: 56px;
   font-weight: normal;
   color: #5E6163;
@@ -49,7 +49,8 @@ h2 {
   font-weight: normal;
   margin-left: 180px;
   font-size: 22px;
-  font-family: 'Old Standard TT', serif;
+  line-height: 0%;
+  font-family: 'Nixie One';
 }
 
 </style>
@@ -62,9 +63,13 @@ h2 {
             <img src="images/kok.png" style="width: 170px; width: 170px; float: left; padding-left: 85px; padding-top: 50px" >
             <h1>Hva' skal vi spise?</h1>
             <h2>En fed inspirationskilde til kloge madplanlægning</h2>  
+            <img src="images/menu.png" style= "padding-bottom: 800px; padding-right: 85px; float: right; white-space: nowrap; line-height: 0%" >
         </div>
 
         <div class="column right"></div>
       </div>
+
+
+
 </body>
 </html>
